# backend/user-service/src/main/java/com/salob/user_service/api/auth/dto/GoogleLoginRequest.java
@@ -1,0 +1,4 @@
+package com.salob.user_service.api.auth.dto;
+
+public record GoogleLoginRequest(String idToken) {
+}
